vorsprung durch technik

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -190,6 +190,50 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-11-15T13:33:04.068908Z",
+     "start_time": "2024-11-15T13:33:04.046803Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_normalized[7].value_counts()",
+   "id": "9dc8aed24e7f482e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7\n",
+       "0.074736    2259\n",
+       "0.072828    1948\n",
+       "0.069513    1928\n",
+       "0.069111    1901\n",
+       "0.071020    1878\n",
+       "            ... \n",
+       "0.842592       1\n",
+       "0.857961       1\n",
+       "0.866198       1\n",
+       "0.870919       1\n",
+       "0.906780       1\n",
+       "Name: count, Length: 5520, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c8d1c712d5efd547"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-11-15T11:50:16.655012Z",
      "start_time": "2024-11-15T11:50:11.958541Z"
     }
