--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T14:16:47.742656Z",
-     "start_time": "2024-11-15T14:16:47.341835Z"
+     "end_time": "2024-11-15T15:26:26.711624Z",
+     "start_time": "2024-11-15T15:26:26.513417Z"
     }
    },
    "cell_type": "code",
@@ -23,114 +23,41 @@
    ],
    "id": "43879df55401fc46",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-15T14:42:14.441043Z",
-     "start_time": "2024-11-15T14:42:14.414980Z"
+     "end_time": "2024-11-15T15:26:40.241314Z",
+     "start_time": "2024-11-15T15:26:40.227978Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import Input, Dense\n",
-    "from tensorflow.keras import regularizers\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the data\n",
-    "data = np.load('path/to/your/data.npy')\n",
-    "labels = np.load('path/to/your/labels.npy')\n",
-    "\n",
-    "# Scale the data\n",
-    "scaler = StandardScaler()\n",
-    "data_scaled = scaler.fit_transform(data)\n",
-    "\n",
-    "# Split into training (normal data) and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data_scaled, labels, test_size=0.2, random_state=42)\n",
-    "X_train = X_train[y_train == 0]  # Train only on normal data\n",
-    "\n",
-    "# Define the autoencoder\n",
-    "input_dim = X_train.shape[1]\n",
-    "encoding_dim = 14  # You can adjust this\n",
-    "input_layer = Input(shape=(input_dim,))\n",
-    "encoder = Dense(encoding_dim, activation='relu', activity_regularizer=regularizers.l1(10e-5))(input_layer)\n",
-    "encoder = Dense(int(encoding_dim / 2), activation='relu')(encoder)\n",
-    "encoder = Dense(int(encoding_dim / 4), activation='relu')(encoder)\n",
-    "decoder = Dense(int(encoding_dim / 2), activation='relu')(encoder)\n",
-    "decoder = Dense(encoding_dim, activation='relu')(decoder)\n",
-    "decoder = Dense(input_dim, activation='sigmoid')(decoder)\n",
-    "\n",
-    "autoencoder = Model(inputs=input_layer, outputs=decoder)\n",
-    "autoencoder.compile(optimizer='adam', loss='mse')\n",
-    "\n",
-    "# Train the autoencoder\n",
-    "history = autoencoder.fit(X_train, X_train, epochs=50, batch_size=32, shuffle=True, validation_split=0.1, verbose=1)\n",
-    "\n",
-    "# Plot training history\n",
-    "plt.plot(history.history['loss'], label='Training Loss')\n",
-    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
-    "plt.title('Autoencoder Training History')\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "# Use the autoencoder to reconstruct the test data\n",
-    "X_test_pred = autoencoder.predict(X_test)\n",
-    "\n",
-    "# Calculate reconstruction error\n",
-    "mse = np.mean(np.power(X_test - X_test_pred, 2), axis=1)\n",
-    "\n",
-    "# Set a threshold for anomaly detection (e.g., 95th percentile)\n",
-    "threshold = np.percentile(mse, 95)\n",
-    "\n",
-    "# Identify anomalies\n",
-    "anomalies = mse > threshold\n",
-    "\n",
-    "# Evaluate the model\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n",
-    "accuracy = accuracy_score(y_test, anomalies)\n",
-    "precision = precision_score(y_test, anomalies)\n",
-    "recall = recall_score(y_test, anomalies)\n",
-    "f1 = f1_score(y_test, anomalies)\n",
-    "\n",
-    "print(f\"Number of total samples: {len(X_test)}\")\n",
-    "print(f\"Number of predicted anomalies: {np.sum(anomalies)}\")\n",
-    "print(f\"Number of actual anomalies: {np.sum(y_test)}\")\n",
-    "print(f\"Accuracy: {accuracy:.2f}\")\n",
-    "print(f\"Precision: {precision:.2f}\")\n",
-    "print(f\"Recall: {recall:.2f}\")\n",
-    "print(f\"F1-score: {f1:.2f}\")\n"
+    "data = test\n",
+    "labels = test_labels"
    ],
-   "id": "initial_id",
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 5\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m StandardScaler\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m train_test_split\n\u001B[1;32m----> 5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Model\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlayers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Input, Dense\n\u001B[0;32m      7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m regularizers\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'tensorflow'"
-     ]
-    }
+   "id": "3fc085e752b3a50e",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Ideas: Look at papers about anomaly detection (using autoencoders)\n",
+    "# Train on training data, evaluate on test data\n",
+    "# Do hyperparam search on lr and percentile"
    ],
-   "execution_count": 4
+   "id": "dff3097bd6ddbf54"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T14:51:01.317554Z",
-     "start_time": "2024-11-15T14:51:01.114939Z"
+     "end_time": "2024-11-15T16:02:40.693117Z",
+     "start_time": "2024-11-15T15:59:31.098695Z"
     }
    },
    "cell_type": "code",
@@ -142,19 +69,18 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the data\n",
-    "data = np.load('path/to/your/data.npy')\n",
-    "labels = np.load('path/to/your/labels.npy')\n",
     "\n",
     "# Scale the data\n",
     "scaler = StandardScaler()\n",
     "data_scaled = scaler.fit_transform(data)\n",
     "\n",
     "# Split into training (normal data) and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data_scaled, labels, test_size=0.2, random_state=42)\n",
-    "X_train = X_train[y_train == 0]  # Train only on normal data\n",
+    "X_train = train\n",
+    "X_test = test\n",
+    "y_test = test_labels\n",
+    "\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(data_scaled, labels, test_size=0.2, random_state=42)\n",
+    "#X_train = X_train[y_train == 0]  # Train only on normal data\n",
     "\n",
     "# Convert data to PyTorch tensors\n",
     "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
@@ -163,6 +89,10 @@
     "\n",
     "# Define the autoencoder model\n",
     "class Autoencoder(nn.Module):\n",
+    "    \n",
+    "    #lr = 0.001\n",
+    "    lr = 0.0001\n",
+    "    percentile = 90\n",
     "    def __init__(self, input_dim):\n",
     "        super(Autoencoder, self).__init__()\n",
     "        self.encoder = nn.Sequential(\n",
@@ -191,11 +121,11 @@
     "input_dim = X_train.shape[1]\n",
     "model = Autoencoder(input_dim)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=model.lr)\n",
     "\n",
     "# Train the autoencoder\n",
-    "num_epochs = 50\n",
-    "batch_size = 32\n",
+    "num_epochs = 10\n",
+    "batch_size = 64\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    permutation = torch.randperm(X_train.size()[0])\n",
@@ -221,7 +151,7 @@
     "mse = np.mean((X_test.numpy() - X_test_pred) ** 2, axis=1)\n",
     "\n",
     "# Set a threshold for anomaly detection (e.g., 95th percentile)\n",
-    "threshold = np.percentile(mse, 95)\n",
+    "threshold = np.percentile(mse, model.percentile)\n",
     "\n",
     "# Identify anomalies\n",
     "anomalies = mse > threshold\n",
@@ -232,29 +162,80 @@
     "recall = recall_score(y_test.numpy(), anomalies)\n",
     "f1 = f1_score(y_test.numpy(), anomalies)\n",
     "\n",
+    "print(f\"Parameters: lr: {model.lr}, percentile: {model.percentile}\")\n",
     "print(f\"Number of total samples: {len(X_test)}\")\n",
     "print(f\"Number of predicted anomalies: {np.sum(anomalies)}\")\n",
     "print(f\"Number of actual anomalies: {np.sum(y_test.numpy())}\")\n",
     "print(f\"Accuracy: {accuracy:.2f}\")\n",
     "print(f\"Precision: {precision:.2f}\")\n",
     "print(f\"Recall: {recall:.2f}\")\n",
-    "print(f\"F1-score: {f1:.2f}\")\n"
+    "print(f\"F1-score: {f1:.2f}\")"
    ],
    "id": "5719d136f9879d7e",
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[5], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnn\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01moptim\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01moptim\u001B[39;00m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'torch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Loss: 0.0140\n",
+      "Epoch [2/10], Loss: 0.0093\n",
+      "Epoch [3/10], Loss: 0.0035\n",
+      "Epoch [4/10], Loss: 0.0053\n",
+      "Epoch [5/10], Loss: 0.0070\n",
+      "Epoch [6/10], Loss: 0.0025\n",
+      "Epoch [7/10], Loss: 0.0025\n",
+      "Epoch [8/10], Loss: 0.0031\n",
+      "Epoch [9/10], Loss: 0.0024\n",
+      "Epoch [10/10], Loss: 0.0019\n",
+      "Parameters: lr: 0.0001, percentile: 90\n",
+      "Number of total samples: 449919\n",
+      "Number of predicted anomalies: 44992\n",
+      "Number of actual anomalies: 54584.0\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.79\n",
+      "Recall: 0.65\n",
+      "F1-score: 0.71\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-15T15:47:09.362103Z",
+     "start_time": "2024-11-15T15:47:09.349018Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "'''\n",
+    "percentile: 95\n",
+    "\n",
+    "Epoch [50/50], Loss: 0.4138\n",
+    "Number of total samples: 89984\n",
+    "Number of predicted anomalies: 4500\n",
+    "Number of actual anomalies: 11032.0\n",
+    "Accuracy: 0.91\n",
+    "Precision: 0.86\n",
+    "Recall: 0.35\n",
+    "F1-score: 0.50\n",
+    "'''"
+   ],
+   "id": "d5a49d181bed42f6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\npercentile: 95\\n\\nEpoch [50/50], Loss: 0.4138\\nNumber of total samples: 89984\\nNumber of predicted anomalies: 4500\\nNumber of actual anomalies: 11032.0\\nAccuracy: 0.91\\nPrecision: 0.86\\nRecall: 0.35\\nF1-score: 0.50\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -262,7 +243,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d5a49d181bed42f6"
+   "id": "4aca56047ead5806"
   }
  ],
  "metadata": {
