--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -219,6 +219,18 @@
     "Precision: 0.86\n",
     "Recall: 0.35\n",
     "F1-score: 0.50\n",
+    "'''\n",
+    "\n",
+    "'''\n",
+    "Epoch [10/10], Loss: 0.0019\n",
+    "Parameters: lr: 0.0001, percentile: 90\n",
+    "Number of total samples: 449919\n",
+    "Number of predicted anomalies: 44992\n",
+    "Number of actual anomalies: 54584.0\n",
+    "Accuracy: 0.94\n",
+    "Precision: 0.79\n",
+    "Recall: 0.65\n",
+    "F1-score: 0.71\n",
     "'''"
    ],
    "id": "d5a49d181bed42f6",
