in deep learning we trust

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -3,8 +3,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T15:26:26.711624Z",
-     "start_time": "2024-11-15T15:26:26.513417Z"
+     "end_time": "2024-11-16T09:59:11.078489Z",
+     "start_time": "2024-11-16T09:59:11.063489Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
+   ],
+   "id": "394093343745da42",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T09:59:11.673724Z",
+     "start_time": "2024-11-16T09:59:11.523688Z"
     }
    },
    "cell_type": "code",
@@ -23,13 +44,13 @@
    ],
    "id": "43879df55401fc46",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T15:26:40.241314Z",
-     "start_time": "2024-11-15T15:26:40.227978Z"
+     "end_time": "2024-11-16T09:59:12.164469Z",
+     "start_time": "2024-11-16T09:59:12.145470Z"
     }
    },
    "cell_type": "code",
@@ -39,36 +60,34 @@
    ],
    "id": "3fc085e752b3a50e",
    "outputs": [],
-   "execution_count": 3
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# Ideas: Look at papers about anomaly detection (using autoencoders)\n",
-    "# Do hyperparam search on lr and percentile"
-   ],
-   "id": "dff3097bd6ddbf54"
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T16:02:40.693117Z",
-     "start_time": "2024-11-15T15:59:31.098695Z"
+     "end_time": "2024-11-16T09:59:12.539494Z",
+     "start_time": "2024-11-16T09:59:12.520237Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n",
+    "# Ideas: Look at papers about anomaly detection (using autoencoders)\n",
+    "# Do hyperparam search on lr and percentile\n",
+    "# do not do data scaling"
+   ],
+   "id": "dff3097bd6ddbf54",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T09:59:14.964942Z",
+     "start_time": "2024-11-16T09:59:14.546745Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "# Scale the data\n",
     "scaler = StandardScaler()\n",
     "data_scaled = scaler.fit_transform(data)\n",
@@ -84,16 +103,29 @@
     "# Convert data to PyTorch tensors\n",
     "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
     "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.float32)\n",
-    "\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32)"
+   ],
+   "id": "3c6a7aac8968882",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T09:59:15.079454Z",
+     "start_time": "2024-11-16T09:59:15.065454Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "# Define the autoencoder model\n",
     "class Autoencoder(nn.Module):\n",
-    "    \n",
-    "    #lr = 0.001\n",
     "    lr = 0.0001\n",
     "    percentile = 90\n",
-    "    def __init__(self, input_dim):\n",
+    "    def __init__(self, input_dim, lr, percentile):\n",
     "        super(Autoencoder, self).__init__()\n",
+    "        self.lr = lr\n",
+    "        self.percentile = percentile\n",
     "        self.encoder = nn.Sequential(\n",
     "            nn.Linear(input_dim, 14),\n",
     "            nn.ReLU(),\n",
@@ -114,17 +146,32 @@
     "    def forward(self, x):\n",
     "        encoded = self.encoder(x)\n",
     "        decoded = self.decoder(encoded)\n",
-    "        return decoded\n",
-    "\n",
+    "        return decoded"
+   ],
+   "id": "5719d136f9879d7e",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "# Instantiate the model, define the loss function and optimizer\n",
+    "lr = 0.0001\n",
+    "percentile = 95\n",
+    "\n",
     "input_dim = X_train.shape[1]\n",
-    "model = Autoencoder(input_dim)\n",
+    "model = Autoencoder(input_dim, lr=lr, percentile=percentile)\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=model.lr)\n",
     "\n",
     "# Train the autoencoder\n",
     "num_epochs = 10\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
+    "\n",
+    "last_loss = \"undefined\"\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    permutation = torch.randperm(X_train.size()[0])\n",
@@ -140,9 +187,18 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "\n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
-    "\n",
+    "    \n",
+    "    last_loss = f\"{loss.item():.4f}\"\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')"
+   ],
+   "id": "9eee01bda7306fc8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "# Use the autoencoder to reconstruct the test data\n",
     "X_test_pred = model(X_test).detach().numpy()\n",
     "\n",
@@ -161,7 +217,8 @@
     "recall = recall_score(y_test.numpy(), anomalies)\n",
     "f1 = f1_score(y_test.numpy(), anomalies)\n",
     "\n",
-    "print(f\"Parameters: lr: {model.lr}, percentile: {model.percentile}\")\n",
+    "print(f\"{num_epochs} epcohs with last loss {last_loss}\")\n",
+    "print(f\"Parameters: lr: {model.lr}, percentile: {model.percentile}, batch_size{batch_size}\")\n",
     "print(f\"Number of total samples: {len(X_test)}\")\n",
     "print(f\"Number of predicted anomalies: {np.sum(anomalies)}\")\n",
     "print(f\"Number of actual anomalies: {np.sum(y_test.numpy())}\")\n",
@@ -170,34 +227,7 @@
     "print(f\"Recall: {recall:.2f}\")\n",
     "print(f\"F1-score: {f1:.2f}\")"
    ],
-   "id": "5719d136f9879d7e",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/10], Loss: 0.0140\n",
-      "Epoch [2/10], Loss: 0.0093\n",
-      "Epoch [3/10], Loss: 0.0035\n",
-      "Epoch [4/10], Loss: 0.0053\n",
-      "Epoch [5/10], Loss: 0.0070\n",
-      "Epoch [6/10], Loss: 0.0025\n",
-      "Epoch [7/10], Loss: 0.0025\n",
-      "Epoch [8/10], Loss: 0.0031\n",
-      "Epoch [9/10], Loss: 0.0024\n",
-      "Epoch [10/10], Loss: 0.0019\n",
-      "Parameters: lr: 0.0001, percentile: 90\n",
-      "Number of total samples: 449919\n",
-      "Number of predicted anomalies: 44992\n",
-      "Number of actual anomalies: 54584.0\n",
-      "Accuracy: 0.94\n",
-      "Precision: 0.79\n",
-      "Recall: 0.65\n",
-      "F1-score: 0.71\n"
-     ]
-    }
-   ],
-   "execution_count": 10
+   "id": "161deb2683361e21"
   },
   {
    "metadata": {
@@ -231,7 +261,20 @@
     "Precision: 0.79\n",
     "Recall: 0.65\n",
     "F1-score: 0.71\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "'''\n",
+    "Epoch [10/10], Loss: 0.0110\n",
+    "Parameters: lr: 0.0001, percentile: 90\n",
+    "Number of total samples: 449919\n",
+    "Number of predicted anomalies: 44992\n",
+    "Number of actual anomalies: 54584.0\n",
+    "Accuracy: 0.82\n",
+    "Precision: 0.21\n",
+    "Recall: 0.17\n",
+    "F1-score: 0.19\n",
+    "'''\n",
+    "\n"
    ],
    "id": "d5a49d181bed42f6",
    "outputs": [
@@ -247,14 +290,6 @@
     }
    ],
    "execution_count": 6
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "4aca56047ead5806"
   }
  ],
  "metadata": {
