--- a/Anamaly_detation_LSTM_cgd.ipynb
+++ b/Anamaly_detation_LSTM_cgd.ipynb
@@ -505,8 +505,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T10:18:59.292560Z",
-     "start_time": "2024-11-16T10:18:58.565949Z"
+     "end_time": "2024-11-16T10:23:30.957014Z",
+     "start_time": "2024-11-16T10:23:30.174870Z"
     }
    },
    "source": [
@@ -516,7 +516,8 @@
     "reconstruction_error = np.mean(np.power(df_test - test_predictions, 2), axis=1) \n",
     "\n",
     "# Set a threshold for anomaly detection (e.g., 95th percentile) \n",
-    "threshold = np.percentile(reconstruction_error, 95) \n",
+    "percentile = 95\n",
+    "threshold = np.percentile(reconstruction_error, percentile) \n",
     "# Identify anomalies \n",
     "predicted_anomalies = reconstruction_error > threshold \n",
     "\n",
@@ -526,6 +527,8 @@
     "precision = precision_score(y_df_test, predicted_anomalies) \n",
     "recall = recall_score(y_df_test, predicted_anomalies) \n",
     "\n",
+    "print(f\"percentile {percentile}\")\n",
+    "print(f\"Number of predicted anomalies {predicted_anomalies.sum()}: Number of actual anomalies {y_df_test.sum()}\")\n",
     "print(f\"Accuracy: {accuracy:.2f}\") \n",
     "print(f\"Precision: {precision:.2f}\") \n",
     "print(f\"Recall: {recall:.2f}\") \n",
@@ -536,6 +539,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "percentile 95\n",
+      "Number of predicted anomalies 22496: Number of actual anomalies 0    54584\n",
+      "dtype: int64\n",
       "Accuracy: 0.93\n",
       "Precision: 0.96\n",
       "Recall: 0.40\n",
@@ -543,61 +549,7 @@
      ]
     }
    ],
-   "execution_count": 16
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-16T10:20:18.422516Z",
-     "start_time": "2024-11-16T10:20:18.402986Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "predicted_anomalies.sum()",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22496"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 23
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-16T10:19:31.961311Z",
-     "start_time": "2024-11-16T10:19:31.939903Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "y_df_test.sum()",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    54584\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 24
   }
  ],
  "metadata": {
