--- a/autoencoder2.ipynb
+++ b/autoencoder2.ipynb
@@ -1,13 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "394093343745da42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:24.616709Z",
      "start_time": "2024-11-16T11:36:21.410323Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -16,19 +19,19 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
-   ],
-   "id": "394093343745da42",
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "43879df55401fc46",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:26.748907Z",
      "start_time": "2024-11-16T11:36:26.582857Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -41,52 +44,52 @@
     "train = np.load(path_train)\n",
     "test = np.load(path_test)\n",
     "test_labels = np.load(path_test_label)"
-   ],
-   "id": "43879df55401fc46",
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3fc085e752b3a50e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:27.254138Z",
      "start_time": "2024-11-16T11:36:27.237133Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "data = test\n",
     "labels = test_labels"
-   ],
-   "id": "3fc085e752b3a50e",
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dff3097bd6ddbf54",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:28.849314Z",
      "start_time": "2024-11-16T11:36:28.836314Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Ideas: Look at papers about anomaly detection (using autoencoders)\n",
     "# Do hyperparam search on lr and percentile\n",
     "# do not do data scaling"
-   ],
-   "id": "dff3097bd6ddbf54",
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3c6a7aac8968882",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:32.176169Z",
      "start_time": "2024-11-16T11:36:30.795806Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Scale the data\n",
     "scaler = StandardScaler()\n",
@@ -121,19 +124,19 @@
     "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
     "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
     "y_test = torch.tensor(y_test, dtype=torch.float32)"
-   ],
-   "id": "3c6a7aac8968882",
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5719d136f9879d7e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:36:33.811138Z",
      "start_time": "2024-11-16T11:36:33.787126Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Define the autoencoder model\n",
     "class Autoencoder(nn.Module):\n",
@@ -193,19 +196,19 @@
     "        encoded = self.encoder(x)\n",
     "        decoded = self.decoder(encoded)\n",
     "        return decoded"
-   ],
-   "id": "5719d136f9879d7e",
-   "outputs": [],
-   "execution_count": 6
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2a451ee19777e7f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:50:15.424331Z",
      "start_time": "2024-11-16T11:50:15.409401Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Instantiate the model, define the loss function and optimizer\n",
     "lr = 0.001\n",
@@ -219,19 +222,29 @@
     "# Train the autoencoder\n",
     "num_epochs = 3\n",
     "batch_size = 32\n"
-   ],
-   "id": "2a451ee19777e7f5",
-   "outputs": [],
-   "execution_count": 41
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9eee01bda7306fc8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:51:12.096337Z",
      "start_time": "2024-11-16T11:50:15.844942Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/3], Loss: 0.0077\n",
+      "Epoch [2/3], Loss: 0.0112\n",
+      "Epoch [3/3], Loss: 0.0134\n"
+     ]
+    }
+   ],
    "source": [
     "last_loss = \"undefined\"\n",
     "\n",
@@ -252,29 +265,36 @@
     "    \n",
     "    last_loss = f\"{loss.item():.4f}\"\n",
     "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')"
-   ],
-   "id": "9eee01bda7306fc8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/3], Loss: 0.0077\n",
-      "Epoch [2/3], Loss: 0.0112\n",
-      "Epoch [3/3], Loss: 0.0134\n"
-     ]
-    }
-   ],
-   "execution_count": 42
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "161deb2683361e21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T11:51:14.913533Z",
      "start_time": "2024-11-16T11:51:14.014031Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shuffle True\n",
+      "3 epochs with last loss 0.0134\n",
+      "Parameters: lr: 0.001, percentile: 94, batch_size32\n",
+      "Number of total samples: 449919\n",
+      "Number of predicted anomalies: 26996\n",
+      "Number of actual anomalies: 54584.0\n",
+      "Accuracy: 0.83\n",
+      "Precision: 0.11\n",
+      "Recall: 0.06\n",
+      "F1-score: 0.07\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the autoencoder to reconstruct the test data\n",
     "X_test_pred = model(X_test).detach().numpy()\n",
@@ -304,33 +324,14 @@
     "print(f\"Precision: {precision:.2f}\")\n",
     "print(f\"Recall: {recall:.2f}\")\n",
     "print(f\"F1-score: {f1:.2f}\")"
-   ],
-   "id": "161deb2683361e21",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shuffle True\n",
-      "3 epochs with last loss 0.0134\n",
-      "Parameters: lr: 0.001, percentile: 94, batch_size32\n",
-      "Number of total samples: 449919\n",
-      "Number of predicted anomalies: 26996\n",
-      "Number of actual anomalies: 54584.0\n",
-      "Accuracy: 0.83\n",
-      "Precision: 0.11\n",
-      "Recall: 0.06\n",
-      "F1-score: 0.07\n"
-     ]
-    }
-   ],
-   "execution_count": 44
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "20bcb439ee634afe",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "##### Small\n",
     "\n",
@@ -421,17 +422,30 @@
     "95 -> 0.55\n",
     "96 -> 0.07\n",
     "'''\n"
-   ],
-   "id": "20bcb439ee634afe"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d5a49d181bed42f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-15T15:47:09.362103Z",
      "start_time": "2024-11-15T15:47:09.349018Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\npercentile: 95\\n\\nEpoch [50/50], Loss: 0.4138\\nNumber of total samples: 89984\\nNumber of predicted anomalies: 4500\\nNumber of actual anomalies: 11032.0\\nAccuracy: 0.91\\nPrecision: 0.86\\nRecall: 0.35\\nF1-score: 0.50\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "percentile: 95\n",
@@ -512,36 +526,27 @@
     "Recall: 0.05\n",
     "F1-score: 0.07\n",
     "'''"
-   ],
-   "id": "d5a49d181bed42f6",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\npercentile: 95\\n\\nEpoch [50/50], Loss: 0.4138\\nNumber of total samples: 89984\\nNumber of predicted anomalies: 4500\\nNumber of actual anomalies: 11032.0\\nAccuracy: 0.91\\nPrecision: 0.86\\nRecall: 0.35\\nF1-score: 0.50\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## USE GRIDSEARCH",
-   "id": "e61e1024bc371116"
+   "id": "e61e1024bc371116",
+   "metadata": {},
+   "source": [
+    "## USE GRIDSEARCH"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "49df3ad641cc333",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T10:44:32.960397Z",
      "start_time": "2024-11-16T10:44:32.923637Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -622,19 +627,19 @@
     "\n",
     "    def get_params(self, deep=True):\n",
     "        return {'input_dim': self.encoder[0].in_features, 'lr': self.lr, 'percentile': self.percentile}"
-   ],
-   "id": "49df3ad641cc333",
-   "outputs": [],
-   "execution_count": 30
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6e744eec332407c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-16T10:59:43.078966Z",
      "start_time": "2024-11-16T10:59:43.048917Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -711,43 +716,20 @@
     "\n",
     "    def get_params(self, deep=True):\n",
     "        return {'input_dim': self.encoder[0].in_features, 'lr': self.lr, 'percentile': self.percentile}"
-   ],
-   "id": "6e744eec332407c2",
-   "outputs": [],
-   "execution_count": 37
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f78903240aacfbb",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
      "start_time": "2024-11-16T11:00:13.566605Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# Define parameter grid for Grid Search\n",
-    "param_grid = {\n",
-    "    'lr': [0.1, 0.01, 0.001, 0.0001, 0.00001],\n",
-    "    'percentile': [85, 90, 95, 97],\n",
-    "    'batch_size': [64],\n",
-    "    'num_epochs': [5]\n",
-    "}\n",
-    "\n",
-    "# Initialize the model and GridSearchCV\n",
-    "input_dim = X_train.shape[1]\n",
-    "autoencoder = AutoencoderSmall(input_dim)\n",
-    "grid_search = GridSearchCV(estimator=autoencoder, param_grid=param_grid, scoring='f1', cv=3)\n",
-    "\n",
-    "# Perform GridSearchCV\n",
-    "grid_search.fit(X_train, X_train)\n",
-    "\n",
-    "# Get the best parameters and model\n",
-    "best_params = grid_search.best_params_\n",
-    "print(f\"Best Parameters: {best_params}\")"
-   ],
-   "id": "1f78903240aacfbb",
    "outputs": [
     {
      "name": "stderr",
@@ -1581,13 +1563,34 @@
      ]
     }
    ],
-   "execution_count": null
+   "source": [
+    "# Define parameter grid for Grid Search\n",
+    "param_grid = {\n",
+    "    'lr': [0.1, 0.01, 0.001, 0.0001, 0.00001],\n",
+    "    'percentile': [85, 90, 95, 97],\n",
+    "    'batch_size': [64],\n",
+    "    'num_epochs': [5]\n",
+    "}\n",
+    "\n",
+    "# Initialize the model and GridSearchCV\n",
+    "input_dim = X_train.shape[1]\n",
+    "autoencoder = AutoencoderSmall(input_dim)\n",
+    "grid_search = GridSearchCV(estimator=autoencoder, param_grid=param_grid, scoring='f1', cv=3)\n",
+    "\n",
+    "# Perform GridSearchCV\n",
+    "grid_search.fit(X_train, X_train)\n",
+    "\n",
+    "# Get the best parameters and model\n",
+    "best_params = grid_search.best_params_\n",
+    "print(f\"Best Parameters: {best_params}\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "fe817194c8d81867",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Rebuild and train the best model\n",
     "best_model = Autoencoder(input_dim, lr=best_params['lr'], percentile=best_params['percentile'])\n",
@@ -1620,8 +1623,7 @@
     "print(f\"Precision: {precision:.2f}\")\n",
     "print(f\"Recall: {recall:.2f}\")\n",
     "print(f\"F1-score: {f1:.2f}\")"
-   ],
-   "id": "fe817194c8d81867"
+   ]
   }
  ],
  "metadata": {
@@ -1633,14 +1635,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
